# seguridadDesarrollo

./: .env.example  .gitignore  IMPLEMENTACION.md  INSTALACION.md  LICENSE  Makefile  PROYECTO_RESUMEN.md  README.md  RESUMEN_SIMPLIFICACION.md  main.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup_env.ps1  setup_env.sh
Seguridad y desarrollo/: __init__.py  dataset.py  features.py  plots.py
docs/: mkdocs.yml
notebooks/: 1.0-eot-importacion_inegi_edu.ipynb  1.0-exploracion_datos_seguridad.ipynb  1_variables_economicas_descarga_datos_crudos.py  2.0-eot-procesar_datos_edu.ipynb  2.0-procesamiento_datos_seguridad.ipynb  2_variables_economicas_procesar_datos_formateados.py  Datos_Proyecto.ipynb  EDA_variables_economicas.ipynb  README.md  analisis_social.py  datos_seguridad_mexico.py  descarga_datos_completa.py  descarga_datos_rezago.py  download_data.py  est_rez_2019_actualizado.xlsx  est_rez_2020_actualizado.xlsx  est_rez_2021_actualizado.xlsx  est_rez_2022_actualizado.xlsx  est_rez_2024_actualizado.xlsx  importacion_inegi.ipynb  importacion_inegi_edu.ipynb  importacion_inegi_edu.py  importacion_variables_economicas.py  main.ipynb  procesado_inegi_edu.py  procesar_datos_rezago.py  procesar_datos_seguridad.py  process_data.py  rezago_social.ipynb  social.ipynb  variables_economicas_datos_crudos.ipynb
references/: coeficiente.md  convenciones_sugeridas.txt  diccionario_datos.md  diccionario_datos_economia.md  diccionario_datos_educacionysalud.md  diccionario_datos_seguridad.md  diccionario_desigualdad.md  diccionario_economia.md  registro_fuentes.txt  (+6 more)
(+55 files in other folders)
